<resources>
    <string name="app_name">WeeJi</string>
    <string name="about_app">「WeeJi」是一款捕捉灵感，提供快速记事服务的智能产品。数据同步百度网盘，共享2T超大空间，数据安全有保障、永恒存储不丢失。</string>
    <string name="SharedPreferences_name">com.weeznn.weeji_preferences</string>
    <string name="isFirst">first</string>
    <string name="BAIDU_ASR_PACKAGE_NAME">com.weeznn.baidu_speech</string>

    <string name="perference_baidu_title">百度语音参数设置</string>
    <string name="perference_baidu_language_title">语言</string>

    <string-array name="baidu_language">
        <item>中文普通话</item>
        <item>中文四川话</item>
        <item>粤语</item>
        <item>英语</item>
        <item>远场模型</item>
    </string-array>

    <string-array name="baidu_language_code">
        <item>1537</item>
        <item>1837</item>
        <item>1637</item>
        <item>1737</item>
        <item>1936</item>
    </string-array>

    <string name="perference_baidu_audio_title">保存录音文件</string>
    <string name="perference_baidu_audio_sum">将会识别过程中的录音文件保存到本地</string>
    <string name="perference_baidu_anim_title">音频动画</string>
    <string name="perference_baidu_anim_sum">将会识别过程中的使用频谱动画！会消耗一定CPU和电量！</string>
    <string name="perference_baidu_prop_title">垂直领域</string>
    <string name="perference_baidu_prop_sum">选择您的领域可略微提高识别率！具体效果以实际测试为准！</string>

    <string-array name="perference_baidu_prop">
        <item>热词</item>
        <item>地图</item>
        <item>音乐</item>
        <item>视频</item>
        <item>应用</item>
        <item>网页</item>
        <item>购物</item>
        <item>健康</item>
        <item>电话</item>
        <item>医疗</item>
        <item>汽车</item>
        <item>娱乐餐饮</item>
        <item>财经</item>
        <item>游戏</item>
        <item>菜谱</item>
        <item>助手</item>
        <item>输入</item>
    </string-array>

    <string-array name="perference_baidu_prop_code">
        <item>10005</item>
        <item>10060</item>
        <item>10001</item>
        <item>10002</item>
        <item>10003</item>
        <item>10004</item>
        <item>10006</item>
        <item>10007</item>
        <item>10008</item>
        <item>10052</item>
        <item>10053</item>
        <item>10054</item>
        <item>10055</item>
        <item>10056</item>
        <item>10057</item>
        <item>10058</item>
        <item>20000</item>
    </string-array>

    <string name="perference_baidu_ring_title">提示音</string>
    <string name="perference_baidu_ring_sum">开启后，软件将会在说话开始|结束、识别成功|出错|取消时播放提示音</string>
    <string name="title_activity_settings">Settings</string>

    <string name="pref_baidu_language">language</string>
    <string name="pref_baidu_prop">porp</string>
    <string name="pref_baidu_anim">anim</string>
    <string name="pref_baidu_audio">audio</string>
    <string name="pref_baidu_ring">ring</string>

    //我的 key
    <string name="pref_self_name">name</string>
    <string name="pref_self_job">job</string>
    <string name="pref_self_company">company</string>
    <string name="pref_self_number">number</string>
    <string name="pref_self_email">email</string>
    <string name="pref_self_photo">photo</string>
    <string name="pref_sim_self_json">sim_self_json</string>
    <string name="pref_self_json">self_json</string>
    //我的 value
    <string name="pref_self_def_name">我</string>
    <string name="pref_self_def_job">##########</string>
    <string name="pref_self_def_company">￥￥￥￥￥￥￥￥￥￥</string>
    <string name="pref_self_def_number">11111111111</string>
    <string name="pref_self_def_email">abcdef@xyz.com</string>
    <string name="pref_self_def_photo"></string>
    <string name="pref_self_def_json">{\"people\":[{\"name\":\"我\",\"job\":\"##########\","company":"￥￥￥￥￥￥￥￥￥￥","number":"11111111111","email":"abcdef@xyz.com","photo":""}]}</string>
    <string name="pref_self_def_sim_json">{\"people\":[{\"name\":\"我\",\"photo\":\"\",\"job\":\"##########\",\"company\":\"￥￥￥￥￥￥￥￥￥￥\"}]}</string>

    <!--联网控制-->
    <string name="pref_intent_contronl">网络</string>
    <string name="pref_intent_4G_asr">使用2G/3G/4G网络识别</string>
    <string name="pref_intent_4G_asr_sub">在2G/3G/4G网络下无法使用语音识别功能</string>
    <string name="pref_intent_4G_nlp">使用2G/3G/4G网络分析</string>
    <string name="pref_intent_4G_nlp_sub">在2G/3G/4G网络下无法得到关键信息/无法自动生成摘要和关键词</string>
    <string name="pref_intent_only_wifi">仅wifi下联网</string>


    //主页面侧边栏
    <string name="nav_skill_title">功能</string>
    <string name="nav_skill_collection">收藏</string>
    <string name="nav_skill_meeting">会议</string>
    <string name="nav_skill_diary">日记</string>
    <string name="nav_skill_note">笔记</string>
    <string name="nav_setting">设置</string>
    <string name="nav_self">我的</string>
    <string-array name="toolbar_title">
        <item>收藏</item>
        <item>会议</item>
        <item>日记</item>
        <item>笔记</item>
        <item>设置</item>
        <item>我的</item>
    </string-array>
    <string name="nav_open">打开</string>
    <string name="nav_close">关闭</string>

    <string name="_appColor">_AppColor</string>
    <string name="_listFragment">最近</string>
    <string name="_listFragmentTitle">最近</string>

    //alertDialog
    <string name="dialog_postive">确定</string>
    <string name="dialog_nagitive">取消</string>

    <string-array name="mood">
        <item>^_^</item>
        <item>T_T</item>
        <item>-_-</item>
        <item>O_O</item>
        <item>^0^</item>
        <item>:/</item>
    </string-array>

    //eidt hint
    <string name="edit_hint_title">标题</string>
    <string name="edit_hint_sub">摘要</string>
    <string name="edit_hint_mood">心情</string>
    <string name="edit_hint_name">姓名</string>
    <string name="edit_hint_job">职位</string>
    <string name="edit_hint_company">公司</string>
    <string name="edit_hint_email">邮箱</string>
    <string name="edit_hint_number">手机</string>


    //toobar text
    <string name="toolbar_text_select">已选择%1$n位联系人</string>

    <string name="lxr_list_null">联系人列表为空!!!</string>

    <!--Intent 中传递的各个表的属性-->
    <!--Table MET-->
    <string name="TABLE_MET_metID">_metID</string>
    <string name="TABLE_MET_time">time</string>
    <string name="TABLE_MET_title">title</string>
    <string name="TABLE_MET_sub">sub</string>
    <string name="TABLE_MET_keyword1">keyword1</string>
    <string name="TABLE_MET_keyword2">keyword2</string>
    <string name="TABLE_MET_keyword3">keyword3</string>
    <string name="TABLE_MET_address">address</string>
    <string name="TABLE_MET_modetator">modetator</string>

    <!--Table DAI-->
    <string name="TABLE_DAI_date">date</string>
    <string name="TABLE_DAI_address">address</string>
    <string name="TABLE_DAI_mood">mood</string>
    <string name="TABLE_DAI_image">mood</string>
    <!--Table NOT-->

    <string name="TABLE_NOT_noteID">_noteID</string>
    <string name="TABLE_NOT_time">time</string>
    <string name="TABLE_NOT_image">image</string>
    <string name="TABLE_NOT_sub">sub</string>
    <string name="TABLE_NOT_source">source</string>
    <!--Table PEO-->

    <!--intent 中传递的CODE-->
    <string name="LEFT_TYPE">type</string>
    <string name="LEFT_CODE">code</string>


    <string name="speech_et_hint">点击开始录音！</string>
    <string name="permission_title">权限申明</string>
    <string name="permission_message">「WeeJi」的正常使用需要获取网络、磁盘、麦克风等权限！</string>

    <string name="AUDIO_RESOULT_NOFILE">音频文件已被删除!</string>

    <string name="popUpWindowBtn">点击结束本次使用！</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
