<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android">
    android:title="@string/perference_baidu_title">
    <PreferenceCategory
        android:title="@string/perference_baidu_title">
        <ListPreference
            android:title="@string/perference_baidu_language_title"
            android:entries="@array/baidu_language"
            android:entryValues="@array/baidu_language_code"
            android:defaultValue="Item1"
            android:dialogTitle="@string/perference_baidu_language_title"
            android:key="language"/>
        <SwitchPreference
            android:title="@string/perference_baidu_anim_title"
            android:key="anim"
            android:defaultValue="false"
            android:summary="@string/perference_baidu_anim_sum"/>
        <SwitchPreference
            android:title="@string/perference_baidu_audio_title"
            android:key="audio"
            android:defaultValue="false"
            android:summary="@string/perference_baidu_audio_sum"/>
        <SwitchPreference
            android:title="@string/perference_baidu_ring_title"
            android:key="ring"
            android:defaultValue="false"
            android:summary="@string/perference_baidu_ring_sum"/>
        <ListPreference
            android:defaultValue="Item1"
            android:key="prop"
            android:entries="@array/perference_baidu_prop"
            android:entryValues="@array/perference_baidu_prop_code"
            android:dialogTitle="@string/perference_baidu_prop_title"
            android:summary="@string/perference_baidu_prop_sum"
            android:title="@string/perference_baidu_prop_title"/>
    </PreferenceCategory>
</PreferenceScreen>